--- a/src/styles/partials/components/about/_formula.scss
+++ b/src/styles/partials/components/about/_formula.scss
@@ -48,6 +48,7 @@
         font-size: 16.5vw;
         position: absolute;
         top: $space-500;
+        white-space: nowrap;
 
         span {
           display: inline-block;
